<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/detailsScrollView">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="vertical"
            android:useDefaultMargins="true">

        <TextView
                android:text="@string/label_name"
                android:id="@+id/nameLabelTextView"
                android:layout_column="0"
                style="@style/ContactLabelTextView"
                android:layout_row="0"/>

        <TextView
                android:id="@+id/nameTextView"
                android:layout_row="0"
                android:layout_column="1"
                style="@style/ContactTextView"/>

        <TextView
                android:text="@string/label_phone"
                android:id="@+id/phoneLabelTextView"
                android:layout_column="0"
                style="@style/ContactLabelTextView"
                android:layout_row="1"/>

        <TextView
                android:id="@+id/phoneTextView"
                android:layout_row="1"
                android:layout_column="1"
                style="@style/ContactTextView"/>

        <TextView
                android:text="@string/label_email"
                android:id="@+id/emailLabelTextView"
                android:layout_column="0"
                style="@style/ContactLabelTextView"
                android:layout_row="2"/>

        <TextView
                android:id="@+id/emailTextView"
                android:layout_row="2"
                android:layout_column="1"
                style="@style/ContactTextView"/>

        <TextView
                android:text="@string/label_street"
                android:id="@+id/streetLabelTextView"
                android:layout_column="0"
                style="@style/ContactLabelTextView"
                android:layout_row="3"/>

        <TextView
                android:id="@+id/streetTextView"
                android:layout_row="3"
                android:layout_column="1"
                style="@style/ContactTextView"/>

        <TextView
                android:text="@string/label_city"
                android:id="@+id/cityLabelTextView"
                android:layout_column="0"
                style="@style/ContactLabelTextView"
                android:layout_row="4"/>

        <TextView
                android:id="@+id/cityTextView"
                android:layout_row="4"
                android:layout_column="1"
                style="@style/ContactTextView"/>

        <TextView
                android:text="@string/label_state"
                android:id="@+id/stateLabelTextView"
                android:layout_column="0"
                style="@style/ContactLabelTextView"
                android:layout_row="5"/>

        <TextView
                android:id="@+id/stateTextView"
                android:layout_row="5"
                android:layout_column="1"
                style="@style/ContactTextView"/>

        <TextView
                android:text="@string/label_zip"
                android:id="@+id/zipLabelTextView"
                android:layout_column="0"
                style="@style/ContactLabelTextView"
                android:layout_row="6"/>

        <TextView
                android:id="@+id/zipTextView"
                android:layout_row="6"
                android:layout_column="1"
                style="@style/ContactTextView"/>
    </GridLayout>
</ScrollView>